@@ -17,3 +17,4 @@ exports.azubu      = require("./providers/azubu");
 exports.beam       = require("./providers/beam");
 exports.picarto    = require("./providers/picarto");
 exports.newlivestream = require("./providers/new-livestream");
+exports.streamup = require("./providers/streamup");
