@@ -6,7 +6,7 @@
 "use strict";
 const { Class: newClass } = require("sdk/core/heritage");
 const { emit } = require("sdk/event/core");
-let { reject } = require("sdk/core/promise");
+let { reject, all } = require("sdk/core/promise");
 let { Task: { async } } = require("resource://gre/modules/Task.jsm");
 
 var { Channel, User } = require('../channeluser');
@@ -42,23 +42,25 @@ const Azubu = newClass({
     _supportsFavorites: true,
     _supportsCredentials: true,
     getUserFavorites: async(function*(username) {
-        let follows = yield promisedPaginationHelper({
-            url: baseURL + "user/"+username+"/followings/list?limit="+pageSize+"&offset=",
-            pageSize: pageSize,
-            request: (url) => {
-                return this._qs.queueRequest(url);
-            },
-            fetchNextPage: function(data, pageSize) {
-                return data.json && "data" in data.json && data.json.data.length == data.json.limit;
-            },
-            getItems: function(data) {
-                if(data.json && "data" in data.json)
-                    return data.json.data;
-                else
-                    return [];
-            }
-        });
-        let userData = yield this._qs.queueRequest(baseURL + "user/"+username+"/profile");
+        let [follows, userData] = yield all([
+            promisedPaginationHelper({
+                url: baseURL + "user/"+username+"/followings/list?limit="+pageSize+"&offset=",
+                pageSize: pageSize,
+                request: (url) => {
+                    return this._qs.queueRequest(url);
+                },
+                fetchNextPage: function(data, pageSize) {
+                    return data.json && "data" in data.json && data.json.data.length == data.json.limit;
+                },
+                getItems: function(data) {
+                    if(data.json && "data" in data.json)
+                        return data.json.data;
+                    else
+                        return [];
+                }
+            }),
+            this._qs.queueRequest(baseURL + "user/"+username+"/profile")
+        ]);
         if(userData.json && "data" in userData.json) {
             var user = new User();
             user.login = userData.json.data.user.username;
@@ -101,6 +103,9 @@ const Azubu = newClass({
                     50: data.json.data.url_photo_small
                 };
 
+                var oldUser = users.find((u) => u.login === user.login);
+                user.id = oldUser.id;
+
                 new PaginationHelper({
                     url: baseURL + "user/"+user.login+"/followings/list?limit="+pageSize+"&offset=",
                     pageSize: pageSize,
@@ -121,15 +126,20 @@ const Azubu = newClass({
                         emit(this, "updateduser", user);
 
                         // only add the channels the user wasn't following already.
-                        this.updateChannels(follows.map((follow) => { return { login: follow.follow.username }; })).then((channels) => {
+                        this.updateChannels(follows
+                            .filter((follow) => oldUser.favorites.every((fav) => fav !== follow.follow.username))
+                            .map((follow) => ({ login: follow.follow.username }))
+                        ).then((channels) => {
                             emit(this, "newchannels", channels);
                         });
+
+                        oldUser.favorites = user.favorites;
                     }
                 });
             }
         });
     },
-    updateRequest: function(channels, callback) {
+    updateRequest: function(channels) {
         var channelnames = channels.map((ch) => ch.login).join(",");
 
         new PaginationHelper({
