@@ -198,9 +198,10 @@ const YouTube = newClass({
                     },
                     onComplete: (subscriptions) => {
                         if(subscriptions.length) {
+                            var oldUser = users.find((usr) => usr.login === ch.login);
+                            ch.id = oldUser.id;
                             ch.favorites = subscriptions.map((sub) => sub.snippet.resourceId.channelId);
                             emit(this, "updateduser", ch);
-                            var oldUser = users.find((usr) => usr.login === ch.login);
                             emit(this, "newchannels", subscriptions.filter(function(follow) {
                                 return !oldUser.favorites.some((fav) => fav === follow.snippet.resourceId.channelId);
                             }).map((sub) => {
@@ -214,6 +215,8 @@ const YouTube = newClass({
                                 ret.uname = sub.snippet.title;
                                 return ret;
                             }));
+
+                            oldUser.favorites = ch.favorites;
                         }
                         else {
                             //TODO: Sometimes needs oAuth for some reason, I guess privacy settings.
