@@ -67,6 +67,7 @@ provider_picarto=Picarto.TV
 provider_picarto_multistream=Multistream
 provider_twitch=Twitch
 provider_twitch_hosted=%s hosting %s
+provider_streamup=Streamup
 provider_ustream=Ustream
 provider_youtube=YouTube
 titleChangeNotification_title=Show a notification when a stream changes the title
